Backend1/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: getweatherservice
  namespace: backend-services
  labels:
    app: getweatherservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: getweatherservice
  template:
    metadata:
      labels:
        app: getweatherservice
    spec:
      containers:
      - name: getweatherservice
        image: 650089658128.dkr.ecr.ap-south-1.amazonaws.com/backend1:8
        ports:
        - containerPort: 8001
        resources:
          requests:
            cpu: "250m"
            memory: "512Mi"
          limits:
            cpu: "500m"
            memory: "1Gi"
        readinessProbe:
          httpGet:
            path: /health
            port: 8001
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /health
            port: 8001
          initialDelaySeconds: 10
          periodSeconds: 10
        volumeMounts:
        - name: env-volume
          mountPath: /app/.env      # 👈 Your app reads /app/.env
          subPath: .env             # 👈 This maps only the .env file
      volumes:
      - name: env-volume
        secret:
          secretName: envforgetweather
